<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-13dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:textColor="@color/colorDarkBlue"
        android:textSize="@dimen/font_size_xl"
        android:paddingTop="@dimen/gap_small"
        android:paddingLeft="@dimen/gap_small"
        android:paddingRight="@dimen/gap_small"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="43dp"
        android:padding="5dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fx" />

        <EditText
            android:id="@+id/editFunction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/text_interval"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/write_interval" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_width="wrap_content">

                <Button
                    android:id="@+id/buttonSetDefaultInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/colorDarkBlue"
                    android:text="@string/button_set_default_interval" />

            </LinearLayout>
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textViewRazdLX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="["
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="@dimen/font_size_l" />

                <EditText
                    android:paddingBottom="@dimen/gap_xxs"
                    android:id="@+id/textInputLX"
                    android:layout_width="@dimen/input_xs"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="number"
                    android:digits="@string/function_digits"
                    android:text="-10"/>

                <TextView
                    android:id="@+id/textViewRazdX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=";"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="@dimen/font_size_m" />

                <EditText
                    android:paddingBottom="@dimen/gap_xxs"
                    android:id="@+id/textInputRX"
                    android:layout_width="@dimen/input_xs"
                    android:layout_height="wrap_content"
                    android:ems="2"
                    android:inputType="number"
                    android:digits="@string/function_digits"
                    android:text="10"/>


                <TextView
                    android:id="@+id/textViewRazdLR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="]"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="@dimen/font_size_l" />
            </LinearLayout>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="2">
            <Button
                android:id="@+id/buttonCopyTo"
                android:shadowColor="@color/colorDarkBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy_to" />
           </LinearLayout>




        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/gap_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCheckInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:shadowColor="@color/colorDarkBlue"
                android:text="@string/give_graph"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="143dp" />
        </LinearLayout>


        <com.jjoe64.graphview.GraphView
            android:id="@+id/graphXY"
            android:layout_width="match_parent"
            android:layout_height="200dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/textFindAnswer"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/find_answer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/textViewRazdLXA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="["
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/font_size_l" />

            <EditText
                android:paddingBottom="@dimen/gap_xxs"
                android:id="@+id/textInputLXA"
                android:layout_width="@dimen/input_xs"
                android:layout_height="wrap_content"
                android:ems="2"
                android:inputType="number"
            android:digits="@string/function_digits"
                android:text="-10"/>

            <TextView
                android:id="@+id/textViewRazdXA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=";"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/font_size_m" />

            <EditText
                android:paddingBottom="@dimen/gap_xxs"
                android:id="@+id/textInputRXA"
                android:layout_width="@dimen/input_xs"
                android:layout_height="wrap_content"
                android:ems="2"
                android:inputType="number"
            android:digits="@string/function_digits"
                android:text="10"/>


            <TextView
                android:id="@+id/textViewRazdLRA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="], E ="
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/font_size_l" />

            <EditText
                android:paddingBottom="@dimen/gap_xxs"
                android:id="@+id/textInputError"
                android:layout_width="@dimen/input_m"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:ems="2"
                android:inputType="number"
            android:digits="@string/function_digits"
                android:text="@string/basic_precision"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/buttonFindAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue"
                android:text="@string/button_find_answer"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_half_division"
                    android:textSize="@dimen/font_size_m"/>

            </LinearLayout>


            <HorizontalScrollView
            android:id="@+id/hscrll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableLayout
                    android:id="@+id/tableHalfDivisionSolution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TableLayout>
        </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/colorDarkBlue"
                    android:id="@+id/textViewAnswerHalfDivision"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_l"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>